# MathAgent

./: .gitignore  README.md  agent_output.json  agent_output_verified.json  answer_utils.py  checker.py  gitignore  langgraph_math_solver.py  langgraph_math_solver_qwen4b.py  pyproject.toml  requirements.txt  run_verification.py  self_consistency.py  test_agent_output.json  test_agent_output_verified.json  tool_generator_subgraph.py  tools.py  verifier.py  verify_answers.py  verify_imo_answers.py
.github/workflows/: renderer-pages.yml
conf/base/: catalog.yml  globals.yml  parameters.yml  sources.yml
conf/base/prompts/: agent-step-qwen4b-v1.yml  agent-step-v1.yml  code-agent-v0.yml  code-agent-v1.yml  math_system.txt  solver-reasoning.yml  solver-v0.yml  solver.yml
conf/experiments/baseline/: parameters.yml
conf/experiments/rag_agent_triggered/: parameters.yml
prompts/: verificator-v0.yml
results/aime24/: 20260704T193240Z.jsonl  agent_20260715T133914Z.jsonl
results/aime25/: 20260704T193246Z.jsonl
results/math500/: 20260704T193252Z.jsonl
scripts/: eval_results.py  grade_results.py  run_agent.py  run_all_agent.py  run_all_benchmarks.py  setup.sh  to_run_format.py
scripts/benchmarks/: agent_benchmark_runner.py  benchmark_runner.py  run_aime24.py  run_aime25.py  run_aime26.py  run_artifacts.py  run_gsm8k.py  run_hmmt25.py  run_hmmt26.py  run_hmmt_feb2025.py  run_imo_answerbench.py  run_math500.py
scripts/qwen35-vllm-bench/: README.md  benchmark.py  diagnose.sh  install.sh  serve.sh  sweep.example.json  sweep.py
src/dashboard/: __init__.py  app.py  artifacts.py  data.py  evaluate.py  evaluation.py  runtime.py  statistics.py
src/langsmith/: artifact_io.py  bootstrap_stats.py  compare_runs.py  grading.py  workflow.py
src/mathagent/: __init__.py  pipeline_registry.py  settings.py
tests/dashboard/: test_artifacts.py  test_evaluation.py  test_integration.py  test_runtime.py  test_statistics.py
tests/langsmith/: conftest.py  test_artifacts_grading.py  test_langsmith_statistics.py  test_workflow.py
(+30 files in other folders)
